--- a/views/client/partials/header.pug
+++ b/views/client/partials/header.pug
@@ -28,7 +28,7 @@ header.header
         .inner-menu
           ul
             li
-              a(href="/") Trang chủ
+              a(href="/chat") Trang chủ
             
             if(user)
               li 
