--- a/public/css/style.css
+++ b/public/css/style.css
@@ -61,6 +61,8 @@
 }
 .chat .inner-body {
   padding: 10px;
+  height: 450px;
+  overflow-y: auto;
 }
 .chat .inner-body .inner-name {
   font-weight: 600;
