--- a/views/client/pages/chat/index.pug
+++ b/views/client/pages/chat/index.pug
@@ -7,7 +7,7 @@ block main
         +box-head("Chat")
     .row
       .col-12
-        .chat
+        .chat(my-id=user.id)
           .inner-body
             .inner-incoming
               each chat in chats
