--- a/public/css/style.css
+++ b/public/css/style.css
@@ -106,3 +106,13 @@
   cursor: pointer;
 }
 /* End chat */
+
+/* .tooltip */
+.tooltip {
+  z-index: -1;
+}
+.tooltip.shown {
+  opacity: 1;
+  z-index: 1070;
+}
+/* End .tooltip */
