--- a/public/css/style.css
+++ b/public/css/style.css
@@ -59,14 +59,17 @@
   border: 1px solid #ddd;
   border-radius: 8px;
 }
+
 .chat .inner-body {
   padding: 10px;
   height: 450px;
   overflow-y: auto;
 }
+
 .chat .inner-body .inner-name {
   font-weight: 600;
 }
+
 .chat .inner-body .inner-content {
   background: #F1F1F1;
   margin-bottom: 10px;
@@ -75,19 +78,39 @@
   border-radius: 15px;
   line-height: 1.4;
 }
+
 .chat .inner-outgoing .inner-content {
   margin-left: auto;
   background: #FE5DA3;
   color: #fff;
 }
+
+.chat .inner-body .inner-images img {
+  width: 80px;
+  height: 80px;
+  object-fit: contain;
+  background: #efefef;
+  padding: 10px;
+  margin: 0 5px 5px 0;
+  border-radius: 5px;
+}
+.chat .inner-body .inner-outgoing .inner-images {
+  margin-left: auto;
+  text-align: right;
+}
+.chat .inner-body .inner-outgoing .inner-images img {
+  margin: 0 0 5px 5px;
+}
 .chat .inner-foot {
   border-top: 1px solid #ddd;
   padding: 10px;
 }
+
 .chat .inner-form {
   display: flex;
   align-items: center;
 }
+
 .chat .inner-form input {
   flex: 1;
   height: 32px;
@@ -96,6 +119,7 @@
   padding: 0 10px;
   outline: none;
 }
+
 .chat .inner-form button {
   border-radius: 15px;
   border: 1px solid #FE5DA3;
@@ -105,14 +129,86 @@
   padding: 0 10px;
   cursor: pointer;
 }
+
+.chat .inner-preview-images {
+  position: relative;
+}
+
+.chat .inner-preview-images .label-container {
+  display: none;
+}
+
+.chat .inner-preview-images .input-container {
+  display: none;
+}
+
+.chat .inner-preview-images .image-preview {
+  height: auto;
+  padding: 0;
+  border-radius: 0;
+}
+
+.chat .inner-preview-images .image-preview-item {
+  width: 90px;
+  background-size: contain;
+}
 /* End chat */
+
 
 /* .tooltip */
 .tooltip {
   z-index: -1;
 }
+
 .tooltip.shown {
   opacity: 1;
   z-index: 1070;
 }
 /* End .tooltip */
+
+/* box-typing */
+.box-typing {
+  position: relative;
+}
+
+.box-typing .inner-dots {
+  position: relative;
+  height: 20px;
+  width: 50px;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  background: #efefef;
+  border-radius: 45px;
+  margin-top: 2px;
+}
+
+.box-typing .inner-dots span {
+  animation: blink 1.5s infinite;
+  height: 5px;
+  width: 5px;
+  background: #252525;
+  border-radius: 50%;
+  display: inline-block;
+  margin: 0 3px;
+}
+
+.box-typing .inner-dots span:nth-child(2) {
+  animation-delay: 0.2s;
+}
+
+.box-typing .inner-dots span:nth-child(3) {
+  animation-delay: 0.4s;
+}
+@keyframes blink {
+  0% {
+    opacity: 0.1;
+ }
+  20% {
+    opacity: 1;
+ }
+  100% {
+    opacity: 0.1;
+ }
+}
+/* End box-typing */
