--- a/views/client/pages/chat/index.pug
+++ b/views/client/pages/chat/index.pug
@@ -1,28 +1,37 @@
 extends ../../layouts/default.pug
 include ../../mixins/box-head.pug
+
 block main
   .container.my-3
     .row
       .col-12
         +box-head("Chat")
+
     .row
       .col-12
         .chat(my-id=user.id)
           .inner-body
-            .inner-incoming
-              each chat in chats
-                div(
-                  class=(
-                    user.id != chat.userId ?
-                    "inner-incoming"
-                    :
-                    "inner-outgoing"
-                  )
+            each chat in chats
+              div(
+                class=(
+                  user.id != chat.userId ?
+                  "inner-incoming"
+                  :
+                  "inner-outgoing"
                 )
-                  if(user.id != chat.userId)
-                    .inner-name #{chat.fullName}
+              )
+                if(user.id != chat.userId)
+                  .inner-name #{chat.fullName}
+                if(chat.content)
                   .inner-content
                     | #{chat.content}
+                if(chat.images)
+                  .inner-images
+                    each image in chat.images
+                      img(src=image)
+
+            div(class="inner-list-typing")
+
           .inner-foot
             form(
               class="inner-form"
@@ -34,8 +43,15 @@ block main
                 name="content"
               )
               span(class="button-icon btn btn-light mx-1") <i class="fa-regular fa-face-smile"></i>
+              label(
+                class="btn btn-light mx-1"
+                for="file-upload-with-preview-upload-images"
+              ) <i class="fa-regular fa-images"></i>
               button
                 i.fa-solid.fa-paper-plane
 
             div(class="tooltip" role="tooltip")
               emoji-picker(class="light")
+
+          .inner-preview-images
+            div(class="custom-file-container" data-upload-id="upload-images")
