--- a/public/css/style.css
+++ b/public/css/style.css
@@ -50,6 +50,19 @@
 
 /* End Footer */
 
+/* image-preview */
+.image-preview {
+  width: 150px;
+  height: auto;
+  margin-top: 15px;
+  border: 1px solid #ddd;
+  padding: 15px;
+  border-radius: 5px;
+}
+.image-preview[src=""] {
+  display: none;
+}
+/* End image-preview */
 /* box-head */
 .box-head {
   margin-bottom: 30px;
