--- a/views/client/pages/user/accept.pug
+++ b/views/client/pages/user/accept.pug
@@ -12,7 +12,7 @@ block main
           div(class="box-user")
             div(class="inner-avatar")
               img(
-                src="https://robohash.org/hicveldicta.png"
+                src=item.avatar ? item.avatar : "https://robohash.org/hicveldicta.png"
                 alt=item.fullName
               )
             div(class="inner-info")
