--- a/views/client/pages/user/profile.pug
+++ b/views/client/pages/user/profile.pug
@@ -20,5 +20,5 @@ block main
             a(
             href="/user/profile/edit" 
             class="btn btn-primary mt-3"
-            ) Chỉnh sửa thông tin
+            ) Cập nhật thông tin
         
